# 2pg-C

./: CMakeLists.txt  README.md
src/: main.cpp
src/config/: Settings.cpp  Settings.hpp
src/core/: Entity.hpp  EntityManager.cpp  EntityManager.hpp  Scene.hpp  SceneManager.hpp
src/core/Entity/: Entity.hpp  EntityManager.cpp  EntityManager.hpp
src/core/Scene/: SceneManager.cpp
src/game/: GameScene.cpp  GameScene.hpp  Player.cpp  Player.hpp
src/game/Mecanics/: RopeComponent.hpp  RopeSystem.cpp  RopeSystem.hpp
src/game/Player/: Player.cpp  Player.hpp
src/input/: Action.hpp  Controller.hpp  InputManager.cpp  InputManager.hpp  KeyboardController.cpp  KeyboardController.hpp
src/physics/: PhysicsComponent.hpp  PhysicsManager.cpp  PhysicsManager.hpp
